Proba Proba Proba

--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -1,6 +1,6 @@
 {# empty Twig template #}
 {% extends "base.html.twig" %}
-{% block title %}Detalji{% endblock %}
+{% block title %}Detalji o proizvodu{% endblock %}
 
 {% block stylesheets %}
     <link href="{{ asset('css/style.css')}}" rel="stylesheet" type="text/css"/>    
